@@ -1,7 +1,5 @@
 Document Component | DocumentConstraint
-Document Component | Reference
 Document Component | SortIndex
-Document Component | Version
 Trash Bin | Base
 Trash Bin | SimpleItem
 Trash Bin | Task
